--- a/app/views/images/new,.html.erb
+++ b/app/views/images/new,.html.erb
@@ -1,2 +1,5 @@
-<h1>Images#new,</h1>
-<p>Find me in app/views/images/new,.html.erb</p>
+<h1>画像投稿フォーム</h1>
+<%= form_with model:@post_image do |f| %>
+  <h4>画像</h4>
+  <%= f,file_field :image, sccept: "image/*"%>
+  
