--- a/app/views/images/new,.html.erb
+++ b/app/views/images/new,.html.erb
@@ -1,5 +1,10 @@
 <h1>画像投稿フォーム</h1>
 <%= form_with model:@post_image do |f| %>
   <h4>画像</h4>
-  <%= f,file_field :image, sccept: "image/*"%>
-  
+  <%= f.file_field :image, sccept: "image/*"%>
+  <h4>ショップ名</h4>
+  <%= f.text_field :image, accept: "image/*" %>
+  <h4>説明</h4>
+  <%= f.text_area :caption %>
+  <%= f.submit '投稿' %>
+<% end 
